--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -7,3 +7,8 @@ services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    admin.User:
+            class: AppBundle\Admin\UserAdmin
+            arguments: [~, AppBundle\Entity\Felhasznalo\User, ~]
+            tags:
+                - { name: sonata.admin, manager_type: orm, group: user, label: User }
